--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 
 /PetProject/.vs/PetProject/DesignTimeBuild/.dtbcache.v2
 /PetProject/.vs/PetProject/v17/.suo
+/PetProject/.vs/PetProject/FileContentIndex/*.vsidx
