--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,4 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/PetProject/.vs/PetProject/DesignTimeBuild/.dtbcache.v2
-/PetProject/.vs/PetProject/v17/.suo
-/PetProject/.vs/PetProject/FileContentIndex/*.vsidx
+/PetProject/.vs/*
